[gd_scene load_steps=7 format=3 uid="uid://b2x3ed3yf16xa"]

[ext_resource type="Script" path="res://GUI/actionGUI/sink_GUI.gd" id="1_702d6"]
[ext_resource type="Texture2D" uid="uid://b7kk24kpdehbm" path="res://res/sprites/GUI/backgrounds/menu_box_white.png" id="2_bmc4l"]
[ext_resource type="Theme" uid="uid://c38cnaco26erq" path="res://GUI/default_theme.tres" id="3_2ycnf"]
[ext_resource type="PackedScene" uid="uid://cf2pewcvtrtic" path="res://GUI/UX_button.tscn" id="4_264yr"]
[ext_resource type="Texture2D" uid="uid://clxphar2j8ggq" path="res://res/sprites/GUI/icons/icon_needs_time.png" id="5_36ih2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jy4p8"]
texture = ExtResource("2_bmc4l")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="SinkGUI" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -166.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
script = ExtResource("1_702d6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jy4p8")

[node name="Text" type="RichTextLabel" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_2ycnf")
bbcode_enabled = true
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmBtn" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_264yr")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Drinken"
expand_icon = true

[node name="FillReservoir" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_264yr")]
custom_minimum_size = Vector2(220, 42)
layout_mode = 2
text = "Reservoir"
icon = ExtResource("5_36ih2")
expand_icon = true

[node name="BackBtn" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_264yr")]
custom_minimum_size = Vector2(100, 42)
layout_mode = 2
text = "Zur√ºck"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FillReservoir" to="." method="_on_confirm_btn_with_soap_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
